# Hachi

./: Cargo.toml  LICENSE  README.md
GHparam/src/: field.rs  smcheck.rs
src/protocol/commit/: Cargo.toml
src/protocol/commit/src/: lib.rs
src/protocol/gadget/: Cargo.toml
src/protocol/gadget/src/: lib.rs
src/protocol/pcs/: Cargo.toml
src/protocol/pcs/src/: lib.rs
src/protocol/proto/: Cargo.toml
src/protocol/proto/src/: lib.rs
src/protocol/ring/: Cargo.toml
src/protocol/ring/src/: lib.rs
src/protocol/transcript/: Cargo.toml
src/protocol/transcript/src/: lib.rs
src/sumchecks/: mle.rs
